; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/openvswitch/extr_datapath.c_add_nested_action_start.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/openvswitch/extr_datapath.c_add_nested_action_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sw_flow_actions = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sw_flow_actions**, i32)* @add_nested_action_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @add_nested_action_start(%struct.sw_flow_actions** %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.sw_flow_actions**, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.sw_flow_actions** %0, %struct.sw_flow_actions*** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load %struct.sw_flow_actions**, %struct.sw_flow_actions*** %4, align 8
  %9 = load %struct.sw_flow_actions*, %struct.sw_flow_actions** %8, align 8
  %10 = getelementptr inbounds %struct.sw_flow_actions, %struct.sw_flow_actions* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  store i32 %11, i32* %6, align 4
  %12 = load %struct.sw_flow_actions**, %struct.sw_flow_actions*** %4, align 8
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @add_action(%struct.sw_flow_actions** %12, i32 %13, i32* null, i32 0)
  store i32 %14, i32* %7, align 4
  %15 = load i32, i32* %7, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %2
  %18 = load i32, i32* %7, align 4
  store i32 %18, i32* %3, align 4
  br label %21

19:                                               ; preds = %2
  %20 = load i32, i32* %6, align 4
  store i32 %20, i32* %3, align 4
  br label %21

21:                                               ; preds = %19, %17
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @add_action(%struct.sw_flow_actions**, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
